# bto_advanced_USBIR_cmd

./: .clang-format  CMakeLists.txt  Makefile  bto_advanced_USBIR_cmd.c  hoge.c  hoge.h
cmd/: CMakeLists.txt
cmd/src/: main.c  main.cpp
cmd2/: CMakeLists.txt  gen
cmd2/src/: main.cpp
server/: CMakeLists.txt  Makefile
server/proto/bto/: ir_service.proto  server.proto
server/src/: ir.hpp  irservice_impl.hpp  main.cpp
src/: btoir.c  btoir.h  plarail.c  plarail.h  type.h
src/cmd/: CMakeLists.txt
src/grpc-client/: CMakeLists.txt
src/grpc-client/src/: main.cpp
src/grpc-server/: CMakeLists.txt
src/grpc-server/proto/bto/: ir_service.proto
src/grpc-server/src/: ir.hpp  irservice_impl.hpp  main.cpp
src/lib/: CMakeLists.txt
src/lib/src/: btoir.c  btoir.h  plarail.c  plarail.h  type.h
src/proto/: CMakeLists.txt  Makefile
src/proto/bto/: ir_service.proto
systemd/: bto-server.service
